--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@vue/cli-plugin-babel": "4.1.1",
     "element-ui": "2.15.2",
     "firebase": "8.6.5",
+    "node-sass": "4.14.1",
+    "sass-loader": "10.1.1",
     "vue": "^2.6.11",
     "vue-router": "3.5.1",
     "vuex": "3.6.2"
